finished with the core logic

--- a/client/index.html
+++ b/client/index.html
@@ -54,13 +54,13 @@
       </div>
       <div class="flex gap-6 cursor-pointer">
         <button
-          id="filterToggle"
           class="flex flex-col items-center justify-center cursor-pointer"
         >
           <img
             src="./assets/shortlisted.svg"
             alt="Toggle Shortlisted"
             class="w-[42px] h-[46px]"
+            id="filterToggle"
           />
         </button>
         <div class="flex flex-col items-center justify-center">
@@ -72,13 +72,11 @@
     <!-- Designer Cards -->
     <div id="designers-container" class="border-b border-gray-200 w-full">
       <div
-        class="bg-[#FFFCF2] px-4 py-6 flex gap-3 font-normal w-full border-b border-gray-200 designer-card"
+        class="px-4 py-6 flex gap-3 font-normal w-full border-b border-gray-200 designer-card"
         data-id="1"
       >
         <div class="border-r border-gray-200 px-4 py-3 min-w-[340px]">
-          <h2 class="font-[400] font-bold text-[18px] text-black title">
-            Epic Designs
-          </h2>
+          <h2 class="font-bold text-[18px] text-black title">Epic Designs</h2>
           <div
             class="flex items-center space-x-1 text-yellow-500 text-base mt-1 mb-3"
           >
@@ -132,7 +130,7 @@
             data-id="1"
           >
             <img
-              src="./assets/shortlist.svg"
+              src="./assets/notShortlist.svg"
               alt="shortlist"
               class="w-[17.25px] h-[21px]"
             />
